all code change

--- a/index.html
+++ b/index.html
@@ -1,23 +1,73 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="./1style.css">
+    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
 </head>
+
 <body>
-<div class="container">
+    <div class="container">
+        <div class="section_A">
+            <header>
+                <nav>
+                    <div class="nav_container">
+                        <div class="nav_in_img_is_ul">
+                            <div class="nav_img">
+                                <img src="./img/logo1-free-img-140x47.png" alt="logo" class="logo_img">
+                            </div>
+                            <ul>
+                                <li>EVERYTHING</li>
+                                <li>WOMAN</li>
+                                <li>MAN</li>
+                                <li>ACCESSORICE</li>
+                                <!-- <div class="nav_side_left"> -->
+                            </ul>
+                        </div>
+                        <div class="ODERlist">
+                            <ul>
+                                <li>ABOUT</li>
+                                <li>CONTACT US</li>
+                                <li><i class="fa-solid fa-basket-shopping"></i></li>
+                                <li><i class="fa-solid fa-id-badge"></i>
+                                </li>
+                            </ul>
 
+                        </div>
+                        <!-- </div> -->
+                    </div>
+                </nav>
+                </nav>
+            </header>
+            <div class="section_text_box">
+                <div class="section_center_text">
+                    <h2 class="text_box">
+                        Raining Offers For Hot Summer!
+                        <h2>
+                </div>
+                <div class="text_descont">
+                    <h4 class="descont_text">
+                        25% Off On All Products
+                    </h4>
+                </div>
+                <div class="btn_box_in_section">
+                    <div class="btn_1">
+                        <button class="shop_button">SHOP NOW</button>
+                    </div>
+                    <div class="btn_2">
+                        <button class="find_button"> FIND MORE</button>
+                    </div>
 
-    <header>
-        <nav>
-
-            <div class="log_img">
-                <img src="./img/logo1-free-img-140x47.png" alt="">
+                </div>
             </div>
-        </nav>
-    </header>
+        </div>
+        <div class="section_B"> zia</div>
+        <div class="section_C"> uddin</div>
+        <div class="section_D"> uddin</div>
     </div>
 </body>
+
 </html>
