--- a/index.html
+++ b/index.html
@@ -35,7 +35,9 @@
                                 <li><i class="fa-solid fa-id-badge"></i>
                                 </li>
                             </ul>
-
+                            <div class="hum_barger_button">
+                                <i class="fa-solid fa-bars"></i>
+                            </div>
                         </div>
                         <!-- </div> -->
                     </div>
@@ -68,6 +70,7 @@
         <div class="section_C"> uddin</div>
         <div class="section_D"> uddin</div>
     </div>
+    <script src="./script.js"></script>
 </body>
 
 </html>
